# libgroupsig

./: CMakeLists.txt  Changelog  FindMCL.cmake  NOTICE  README.md  codecov.yml
.github/: codecov.yml
.github/codecov/: codecov.yml
.github/workflows/: cicd.yml
cmake_modules/: gcovr.cmake  gtest.cmake  mcl.cmake
src/crypto/: CMakeLists.txt  prf.c  prf.h  spk.c  spk.h
src/groupsig/: CMakeLists.txt  bld_key.c  blindsig.c  crl.c  gml.c  groupsig.c  grp_key.c  identity.c  mem_key.c  mgr_key.c  proof.c  signature.c  trapdoor.c
src/groupsig/bbs04/: CMakeLists.txt  claim.c  claim_verify.c  env.c  gml.c  gml.h  grp_key.c  grp_key.h  identity.c  identity.h  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  reveal.c  setup.c  sign.c  signature.c  signature.h  trace.c  trapdoor.c  trapdoor.h  update_env.c  verify.c
src/groupsig/cpy06/: CMakeLists.txt  claim.c  claim_verify.c  crl.c  crl.h  env.c  gml.c  gml.h  grp_key.c  grp_key.h  identity.c  identity.h  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  proof.c  proof.h  prove_equality.c  prove_equality_verify.c  reveal.c  setup.c  sign.c  signature.c  signature.h  trace.c  trapdoor.c  trapdoor.h  update_env.c  verify.c
src/groupsig/dl21/: CMakeLists.txt  grp_key.c  grp_key.h  identify.c  identity.c  identity.h  join_mem.c  join_mgr.c  link.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  proof.c  proof.h  setup.c  sign.c  signature.c  signature.h  verify.c  verify_link.c
src/groupsig/dl21seq/: CMakeLists.txt  grp_key.c  grp_key.h  identify.c  identity.c  identity.h  join_mem.c  join_mgr.c  link.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  proof.c  proof.h  seqlink.c  setup.c  sign.c  signature.c  signature.h  verify.c  verify_link.c  verify_seqlink.c
src/groupsig/gl19/: CMakeLists.txt  bld_key.c  bld_key.h  blind.c  blindsig.c  blindsig.h  convert.c  env.c  grp_key.c  grp_key.h  identity.c  identity.h  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  setup.c  sign.c  signature.c  signature.h  unblind.c  verify.c
src/groupsig/klap20/: CMakeLists.txt  gml.c  gml.h  grp_key.c  grp_key.h  identity.h.bak  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  open_verify.c  proof.c  proof.h  setup.c  sign.c  signature.c  signature.h  spk.c  spk.h  verify.c
src/groupsig/kty04/: CMakeLists.txt  claim.c  claim_verify.c  crl.c  crl.h  gml.c  gml.h  grp_key.c  grp_key.h  identity.c  identity.h  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  proof.c  proof.h  prove_equality.c  prove_equality_verify.c  reveal.c  setup.c  sign.c  signature.c  signature.h  sphere.c  sphere.h  trace.c  trapdoor.c  trapdoor.h  verify.c
src/groupsig/ps16/: CMakeLists.txt  gml.c  gml.h  grp_key.c  grp_key.h  identity.c  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  open_verify.c  proof.c  proof.h  setup.c  sign.c  signature.c  signature.h  verify.c
src/include/: bbs04.h  big.h  bigf.h  bigz.h  bld_key.h  bld_key_handles.h  blindsig.h  blindsig_handles.h  cpy06.h  crl.h  crl_handles.h  dl21.h  dl21seq.h  gl19.h  gml.h  gml_handles.h  groupsig.h  grp_key.h  grp_key_handles.h  identity.h  identity_handles.h  key.h  klap20.h  kty04.h  logger.h  mem_key.h  mem_key_handles.h  message.h  mgr_key.h  mgr_key_handles.h  proof.h  proof_handles.h  ps16.h  registered_groupsigs.h  signature.h  signature_handles.h  sysenv.h  trapdoor.h  trapdoor_handles.h  types.h
src/logger/: CMakeLists.txt  logger.c
src/math/: CMakeLists.txt  nt.c  nt.h  perm.c  perm.h  rnd.c  rnd.h
src/misc/: CMakeLists.txt  misc.c  misc.h  profile.c  profile.h
src/msg/: CMakeLists.txt  message.c  misc.c  misc.h
src/shim/: CMakeLists.txt  base64.c  base64.h  bigf.c  bigz.c  hash.c  hash.h  pbc_ext.c  pbc_ext.h  rsa.c  rsa.h
src/sys/: CMakeLists.txt  mem.c  mem.h  sysenv.c
src/test/: CMakeLists.txt  test_bbs04.cpp  test_bigz.cpp  test_dl21.cpp  test_dl21seq.cpp  test_gl19.cpp  test_hash.cpp  test_klap20.cpp  test_pbc.cpp  test_ps16.cpp
src/tools/: CMakeLists.txt  benchmarks.c  blind.c  check.sh  claim.c  claim_verify.c  convert.c  create.sh  group_create.c  gs_options.h  join.c  libgroupsig.sh  open.c  parse-prof.sh  plot.gnp  print_key.c  process-benchmarks.sh  profile.sh  revoke.c  same_signer.c  sign.c  trace.c  unblind.c  verify.c
src/wrappers/java/jgroupsig/: pom.xml
src/wrappers/java/jgroupsig/java/: pom.xml
src/wrappers/java/jgroupsig/jni/: pom.xml
src/wrappers/java/jgroupsig/samples/: pom.xml
src/wrappers/nodejs/jsgroupsig/: CMakeLists.txt  README.md  package-lock.json  package.json
src/wrappers/nodejs/jsgroupsig/cmake_modules/: libgroupsig.cmake
src/wrappers/nodejs/jsgroupsig/lib/: index.js
src/wrappers/nodejs/jsgroupsig/src/: base64.c  base64.h  jsgroupsig.c
src/wrappers/nodejs/jsgroupsig/test/: test_BBS04.js  test_GL19.js  test_PS16.js
src/wrappers/nodejs/samples/: sign_bbs04.js  sign_gl19.js
src/wrappers/nodejs/server/: .env  Dockerfile  package-lock.json  package.json
src/wrappers/nodejs/server/mocks/: behavior.js
src/wrappers/nodejs/server/postman/: libgroupsig-REST-API.postman_collection.json  (+1 more)
src/wrappers/python/: .coveragerc  Dockerfile  README.md  codecov.yml  setup.py
src/wrappers/python/pygroupsig/: __init__.py  bbs04_build.py  bld_key_build.py  bldkey.py  blindsig.py  blindsig_build.py  common_build.py  constants.py  crl_build.py  exim_build.py  gl19_build.py  gml.py  gml_build.py  groupsig.py  groupsig_build.py  grp_key_build.py  grpkey.py  identity.py  identity_build.py  key_build.py  klap20_build.py  libgroupsig_build.py  mem_key_build.py  memkey.py  message.py  message_build.py  mgr_key_build.py  mgrkey.py  proof.py  proof_build.py  ps16_build.py  signature.py  signature_build.py  trapdoor_build.py  types_build.py
src/wrappers/python/samples/: blind.py  hello.py  join-mem-seq1.py  join-mem-seq3.py  sign.py  sign_bbs04.py  sign_gl19.py  unblind.py
src/wrappers/python/tests/: test_BBS04.py  test_GL19.py  test_KLAP20.py  test_PS16.py  tests_PS16.py
(+35 files in other folders)
